apps/gatus/networkpolicy.yaml
---
apiVersion: "networking.k8s.io/v1"
kind: "NetworkPolicy"
metadata:
  name: "gatus"
spec:
  podSelector: {}
  policyTypes:
    - "Ingress"
  ingress:
    - ports:
        - protocol: "TCP"
          port: "gatus"
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: "monitoring"
          podSelector:
            matchLabels:
              app.kubernetes.io/name: "prometheus"
